--- a/HW3/hw3.ipynb
+++ b/HW3/hw3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/94BcdnuidF81xR6MvuSD",
+      "authorship_tag": "ABX9TyPQqpWsD+M420jc+upXuPHN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2101,6 +2101,15 @@
           "execution_count": 55
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We find the mean and other measures of variability."
+      ],
+      "metadata": {
+        "id": "1QfoR-qeUZpF"
+      }
     },
     {
       "cell_type": "code",
